[package]
name = "animosity"
version = "0.4.1"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[profile.dev]
debug = 1
opt-level = 2
lto = "no"

[profile.release]
debug = 1
overflow-checks = true
lto = true

[dependencies]
anyhow = "1.0"
app_dirs = "1.2.1"
byteorder = "1.2"
cgmath = "0.17"
ddsfile = "0.4"
fern = "0.6"
fxhash = "0.2"
glium = "0.26"
image = { version = "0.23", features = ["png"], default-features = false }
log = "0.4"
parking_lot = "0.10"
png = "0.16"
quick-error = "1.2"
rayon = "1.3"
serde = "1.0.37"    
serde_derive = "1.0.37"
serde_json = "1.0.13"
thread_local = "1.0"
thread-id = "3.3"

#cairo-rs = "0.8"
#gtk = { version = "0.8", features = ["v3_22_20"] }
#gdk = "0.12"
#gio = "0.8"
#glib = "0.9"

cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_22_20"] }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gio = { git = "https://github.com/gtk-rs/gio" }
glib = { git = "https://github.com/gtk-rs/glib" }


# Not popular (known, widely used) so more skeptical but at least 1.0.0 is good
# Also port of a C++ library so likely not updated
squish = "=1.0.0"
