[package]
name = "animosity"
version = "0.5.3"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[profile.dev]
debug = 1
opt-level = 2
lto = "no"

[profile.release]
debug = 1
overflow-checks = true
lto = true

[dependencies]
anyhow = "1.0"
byteorder = "1.2"
cgmath = "0.18"
ddsfile = "0.5"
fern = "0.6"
fxhash = "0.2"
glium = "0.32"
image = { version = "0.24", features = ["png"], default-features = false }
log = "0.4"
once_cell = "1.4"
parking_lot = "0.11"
png = "0.17"
quick-error = "2.0"
rayon = "1.3"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
thread_local = "1.0"
thread-id = "4.0"

app_dirs = { package = "app_dirs2", version = "2.3.2" }

cairo-rs = "0.16"
gtk = "0.16"
gdk = "0.16"
gio = "0.16"
glib = "0.16"

# Should keep eye out for crates.io update
[dependencies.squish]
git = "https://github.com/jansol/squish-rs.git"
rev = "f93f58e9b36ba8b04468dac24fabfa331b4f4fe3"
